--- a/tools/cximage599a_full/j2k/Debug/BuildLog.htm
+++ b/tools/cximage599a_full/j2k/Debug/BuildLog.htm
@@ -11,42 +11,42 @@
 </h3>
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 命令行
-</font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在创建临时文件“e:\cocos2dx\67393cximage599a_full\j2k\Debug\RSP00000F.rsp”，其内容为
+</font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在创建临时文件“e:\project\quick-cc\tools\cximage599a_full\j2k\Debug\RSP00000B.rsp”，其内容为
 [
 /Od /D "WIN32" /D "_DEBUG" /D "_WINDOWS" /D "LIBJ2K_EXPORTS" /D "_AFXDLL" /D "_MBCS" /FD /EHsc /RTC1 /MDd /Fp".\Debug/j2k.pch" /Fo".\Debug/" /Fd".\Debug/" /W3 /c /ZI /TC
-.\tgt.c
-.\tcd.c
-.\t2.c
-.\t1.c
-.\pi.c
-.\mqc.c
-.\mct.c
-.\j2k.c
-.\int.c
-.\fix.c
-.\dwt.c
-.\cio.c
-.\bio.c
+".\tgt.c"
+".\tcd.c"
+".\t2.c"
+".\t1.c"
+".\pi.c"
+".\mqc.c"
+".\mct.c"
+".\j2k.c"
+".\int.c"
+".\fix.c"
+".\dwt.c"
+".\cio.c"
+".\bio.c"
 ]
-正在创建命令行“cl.exe @e:\cocos2dx\67393cximage599a_full\j2k\Debug\RSP00000F.rsp /nologo”
-正在创建临时文件“e:\cocos2dx\67393cximage599a_full\j2k\Debug\RSP000010.rsp”，其内容为
+正在创建命令行“cl.exe @"e:\project\quick-cc\tools\cximage599a_full\j2k\Debug\RSP00000B.rsp" /nologo”
+正在创建临时文件“e:\project\quick-cc\tools\cximage599a_full\j2k\Debug\RSP00000C.rsp”，其内容为
 [
 /OUT:".\Debug\j2k.lib" /NOLOGO
-.\debug\bio.obj
-.\debug\cio.obj
-.\debug\dwt.obj
-.\debug\fix.obj
-.\debug\int.obj
-.\debug\j2k.obj
-.\debug\mct.obj
-.\debug\mqc.obj
-.\debug\pi.obj
-.\debug\t1.obj
-.\debug\t2.obj
-.\debug\tcd.obj
-.\debug\tgt.obj
+".\Debug\bio.obj"
+".\Debug\cio.obj"
+".\Debug\dwt.obj"
+".\Debug\fix.obj"
+".\Debug\int.obj"
+".\Debug\j2k.obj"
+".\Debug\mct.obj"
+".\Debug\mqc.obj"
+".\Debug\pi.obj"
+".\Debug\t1.obj"
+".\Debug\t2.obj"
+".\Debug\tcd.obj"
+".\Debug\tgt.obj"
 ]
-正在创建命令行“lib.exe @e:\cocos2dx\67393cximage599a_full\j2k\Debug\RSP000010.rsp”
+正在创建命令行“lib.exe @"e:\project\quick-cc\tools\cximage599a_full\j2k\Debug\RSP00000C.rsp"”
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 输出窗口
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在编译...
@@ -68,6 +68,6 @@ bio.c
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 结果
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-生成日志保存在“file://e:\cocos2dx\67393cximage599a_full\j2k\Debug\BuildLog.htm”中
+生成日志保存在“file://e:\project\quick-cc\tools\cximage599a_full\j2k\Debug\BuildLog.htm”中
 j2k - 0 错误，0 警告</pre></table><table   width=100% height=20 bgcolor=#CFCFE5><tr><td><font face=宋体 size=+2>
 </font></table></body></html>
