--- a/tools/cximage599a_full/jasper/Debug/BuildLog.htm
+++ b/tools/cximage599a_full/jasper/Debug/BuildLog.htm
@@ -11,116 +11,116 @@
 </h3>
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 命令行
-</font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在创建临时文件“e:\cocos2dx\67393cximage599a_full\jasper\Debug\RSP00000D.rsp”，其内容为
+</font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在创建临时文件“e:\project\quick-cc\tools\cximage599a_full\jasper\Debug\RSP00000D.rsp”，其内容为
 [
 /Od /I ".\include" /D "_DEBUG" /D "WIN32" /D "_LIB" /D "JAS_WIN_MSVC_BUILD" /D "_MBCS" /FD /EHsc /RTC1 /MDd /Fp".\Debug/jasper.pch" /Fo".\Debug/" /Fd".\Debug/" /W2 /c /ZI
-.\ras\ras_enc.c
-.\ras\ras_dec.c
-.\ras\ras_cod.c
-.\pnm\pnm_enc.c
-.\pnm\pnm_dec.c
-.\pnm\pnm_cod.c
-.\pgx\pgx_enc.c
-.\pgx\pgx_dec.c
-.\pgx\pgx_cod.c
-.\mif\mif_cod.c
-.\jpg\jpg_val.c
-.\jpg\jpg_dummy.c
-.\jpc\jpc_util.c
-.\jpc\jpc_tsfb.c
-.\jpc\jpc_tagtree.c
-.\jpc\jpc_t2enc.c
-.\jpc\jpc_t2dec.c
-.\jpc\jpc_t2cod.c
-.\jpc\jpc_t1enc.c
-.\jpc\jpc_t1dec.c
-.\jpc\jpc_t1cod.c
-.\jpc\jpc_qmfb.c
-.\jpc\jpc_mqenc.c
-.\jpc\jpc_mqdec.c
-.\jpc\jpc_mqcod.c
-.\jpc\jpc_mct.c
-.\jpc\jpc_math.c
-.\jpc\jpc_enc.c
-.\jpc\jpc_dec.c
-.\jpc\jpc_cs.c
-.\jpc\jpc_bs.c
-.\jp2\jp2_enc.c
-.\jp2\jp2_dec.c
-.\jp2\jp2_cod.c
-.\base\jas_version.c
-.\base\jas_tvp.c
-.\base\jas_string.c
-.\base\jas_stream.c
-.\base\jas_seq.c
-.\base\jas_malloc.c
-.\base\jas_init.c
-.\base\jas_image.c
-.\base\jas_iccdata.c
-.\base\jas_icc.c
-.\base\jas_getopt.c
-.\base\jas_debug.c
-.\base\jas_cm.c
-.\bmp\bmp_enc.c
-.\bmp\bmp_dec.c
-.\bmp\bmp_cod.c
+".\ras\ras_enc.c"
+".\ras\ras_dec.c"
+".\ras\ras_cod.c"
+".\pnm\pnm_enc.c"
+".\pnm\pnm_dec.c"
+".\pnm\pnm_cod.c"
+".\pgx\pgx_enc.c"
+".\pgx\pgx_dec.c"
+".\pgx\pgx_cod.c"
+".\mif\mif_cod.c"
+".\jpg\jpg_val.c"
+".\jpg\jpg_dummy.c"
+".\jpc\jpc_util.c"
+".\jpc\jpc_tsfb.c"
+".\jpc\jpc_tagtree.c"
+".\jpc\jpc_t2enc.c"
+".\jpc\jpc_t2dec.c"
+".\jpc\jpc_t2cod.c"
+".\jpc\jpc_t1enc.c"
+".\jpc\jpc_t1dec.c"
+".\jpc\jpc_t1cod.c"
+".\jpc\jpc_qmfb.c"
+".\jpc\jpc_mqenc.c"
+".\jpc\jpc_mqdec.c"
+".\jpc\jpc_mqcod.c"
+".\jpc\jpc_mct.c"
+".\jpc\jpc_math.c"
+".\jpc\jpc_enc.c"
+".\jpc\jpc_dec.c"
+".\jpc\jpc_cs.c"
+".\jpc\jpc_bs.c"
+".\jp2\jp2_enc.c"
+".\jp2\jp2_dec.c"
+".\jp2\jp2_cod.c"
+".\base\jas_version.c"
+".\base\jas_tvp.c"
+".\base\jas_string.c"
+".\base\jas_stream.c"
+".\base\jas_seq.c"
+".\base\jas_malloc.c"
+".\base\jas_init.c"
+".\base\jas_image.c"
+".\base\jas_iccdata.c"
+".\base\jas_icc.c"
+".\base\jas_getopt.c"
+".\base\jas_debug.c"
+".\base\jas_cm.c"
+".\bmp\bmp_enc.c"
+".\bmp\bmp_dec.c"
+".\bmp\bmp_cod.c"
 ]
-正在创建命令行“cl.exe @e:\cocos2dx\67393cximage599a_full\jasper\Debug\RSP00000D.rsp /nologo”
-正在创建临时文件“e:\cocos2dx\67393cximage599a_full\jasper\Debug\RSP00000E.rsp”，其内容为
+正在创建命令行“cl.exe @"e:\project\quick-cc\tools\cximage599a_full\jasper\Debug\RSP00000D.rsp" /nologo”
+正在创建临时文件“e:\project\quick-cc\tools\cximage599a_full\jasper\Debug\RSP00000E.rsp”，其内容为
 [
 /OUT:".\Debug\jasper.lib" /NOLOGO
-.\debug\bmp_cod.obj
-.\debug\bmp_dec.obj
-.\debug\bmp_enc.obj
-.\debug\jas_cm.obj
-.\debug\jas_debug.obj
-.\debug\jas_getopt.obj
-.\debug\jas_icc.obj
-.\debug\jas_iccdata.obj
-.\debug\jas_image.obj
-.\debug\jas_init.obj
-.\debug\jas_malloc.obj
-.\debug\jas_seq.obj
-.\debug\jas_stream.obj
-.\debug\jas_string.obj
-.\debug\jas_tvp.obj
-.\debug\jas_version.obj
-.\debug\jp2_cod.obj
-.\debug\jp2_dec.obj
-.\debug\jp2_enc.obj
-.\debug\jpc_bs.obj
-.\debug\jpc_cs.obj
-.\debug\jpc_dec.obj
-.\debug\jpc_enc.obj
-.\debug\jpc_math.obj
-.\debug\jpc_mct.obj
-.\debug\jpc_mqcod.obj
-.\debug\jpc_mqdec.obj
-.\debug\jpc_mqenc.obj
-.\debug\jpc_qmfb.obj
-.\debug\jpc_t1cod.obj
-.\debug\jpc_t1dec.obj
-.\debug\jpc_t1enc.obj
-.\debug\jpc_t2cod.obj
-.\debug\jpc_t2dec.obj
-.\debug\jpc_t2enc.obj
-.\debug\jpc_tagtree.obj
-.\debug\jpc_tsfb.obj
-.\debug\jpc_util.obj
-.\debug\jpg_dummy.obj
-.\debug\jpg_val.obj
-.\debug\mif_cod.obj
-.\debug\pgx_cod.obj
-.\debug\pgx_dec.obj
-.\debug\pgx_enc.obj
-.\debug\pnm_cod.obj
-.\debug\pnm_dec.obj
-.\debug\pnm_enc.obj
-.\debug\ras_cod.obj
-.\debug\ras_dec.obj
-.\debug\ras_enc.obj
+".\Debug\bmp_cod.obj"
+".\Debug\bmp_dec.obj"
+".\Debug\bmp_enc.obj"
+".\Debug\jas_cm.obj"
+".\Debug\jas_debug.obj"
+".\Debug\jas_getopt.obj"
+".\Debug\jas_icc.obj"
+".\Debug\jas_iccdata.obj"
+".\Debug\jas_image.obj"
+".\Debug\jas_init.obj"
+".\Debug\jas_malloc.obj"
+".\Debug\jas_seq.obj"
+".\Debug\jas_stream.obj"
+".\Debug\jas_string.obj"
+".\Debug\jas_tvp.obj"
+".\Debug\jas_version.obj"
+".\Debug\jp2_cod.obj"
+".\Debug\jp2_dec.obj"
+".\Debug\jp2_enc.obj"
+".\Debug\jpc_bs.obj"
+".\Debug\jpc_cs.obj"
+".\Debug\jpc_dec.obj"
+".\Debug\jpc_enc.obj"
+".\Debug\jpc_math.obj"
+".\Debug\jpc_mct.obj"
+".\Debug\jpc_mqcod.obj"
+".\Debug\jpc_mqdec.obj"
+".\Debug\jpc_mqenc.obj"
+".\Debug\jpc_qmfb.obj"
+".\Debug\jpc_t1cod.obj"
+".\Debug\jpc_t1dec.obj"
+".\Debug\jpc_t1enc.obj"
+".\Debug\jpc_t2cod.obj"
+".\Debug\jpc_t2dec.obj"
+".\Debug\jpc_t2enc.obj"
+".\Debug\jpc_tagtree.obj"
+".\Debug\jpc_tsfb.obj"
+".\Debug\jpc_util.obj"
+".\Debug\jpg_dummy.obj"
+".\Debug\jpg_val.obj"
+".\Debug\mif_cod.obj"
+".\Debug\pgx_cod.obj"
+".\Debug\pgx_dec.obj"
+".\Debug\pgx_enc.obj"
+".\Debug\pnm_cod.obj"
+".\Debug\pnm_dec.obj"
+".\Debug\pnm_enc.obj"
+".\Debug\ras_cod.obj"
+".\Debug\ras_dec.obj"
+".\Debug\ras_enc.obj"
 ]
-正在创建命令行“lib.exe @e:\cocos2dx\67393cximage599a_full\jasper\Debug\RSP00000E.rsp”
+正在创建命令行“lib.exe @"e:\project\quick-cc\tools\cximage599a_full\jasper\Debug\RSP00000E.rsp"”
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 输出窗口
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在编译...
@@ -183,6 +183,6 @@ bmp_cod.c
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 结果
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-生成日志保存在“file://e:\cocos2dx\67393cximage599a_full\jasper\Debug\BuildLog.htm”中
+生成日志保存在“file://e:\project\quick-cc\tools\cximage599a_full\jasper\Debug\BuildLog.htm”中
 jasper - 0 错误，0 警告</pre></table><table   width=100% height=20 bgcolor=#CFCFE5><tr><td><font face=宋体 size=+2>
 </font></table></body></html>
