--- a/tools/cximage599a_full/jbig/Debug/BuildLog.htm
+++ b/tools/cximage599a_full/jbig/Debug/BuildLog.htm
@@ -11,30 +11,30 @@
 </h3>
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 命令行
-</font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在创建临时文件“e:\cocos2dx\67393cximage599a_full\jbig\Debug\RSP00000B.rsp”，其内容为
+</font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在创建临时文件“e:\project\quick-cc\tools\cximage599a_full\jbig\Debug\RSP000009.rsp”，其内容为
 [
 /Od /D "WIN32" /D "_DEBUG" /D "_LIB" /D "_AFXDLL" /D "_MBCS" /FD /EHsc /RTC1 /MDd /YX"stdafx.h" /Fp".\Debug/jbig.pch" /Fo".\Debug/" /Fd".\Debug/" /W3 /c /ZI /TC
-.\jbig_tab.c
-.\jbig.c
+".\jbig_tab.c"
+".\jbig.c"
 ]
-正在创建命令行“cl.exe @e:\cocos2dx\67393cximage599a_full\jbig\Debug\RSP00000B.rsp /nologo”
-正在创建临时文件“e:\cocos2dx\67393cximage599a_full\jbig\Debug\RSP00000C.rsp”，其内容为
+正在创建命令行“cl.exe @"e:\project\quick-cc\tools\cximage599a_full\jbig\Debug\RSP000009.rsp" /nologo”
+正在创建临时文件“e:\project\quick-cc\tools\cximage599a_full\jbig\Debug\RSP00000A.rsp”，其内容为
 [
 /OUT:".\Debug\jbig.lib" /NOLOGO
-.\debug\jbig.obj
-.\debug\jbig_tab.obj
+".\Debug\jbig.obj"
+".\Debug\jbig_tab.obj"
 ]
-正在创建命令行“lib.exe @e:\cocos2dx\67393cximage599a_full\jbig\Debug\RSP00000C.rsp”
+正在创建命令行“lib.exe @"e:\project\quick-cc\tools\cximage599a_full\jbig\Debug\RSP00000A.rsp"”
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 输出窗口
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在编译...
 jbig_tab.c
 jbig.c
-e:\cocos2dx\67393cximage599a_full\jbig\jbig.c(1497) : warning C4146: 一元负运算符应用于无符号类型，结果仍为无符号类型
+e:\project\quick-cc\tools\cximage599a_full\jbig\jbig.c(1497) : warning C4146: 一元负运算符应用于无符号类型，结果仍为无符号类型
 正在创建库...
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 结果
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-生成日志保存在“file://e:\cocos2dx\67393cximage599a_full\jbig\Debug\BuildLog.htm”中
+生成日志保存在“file://e:\project\quick-cc\tools\cximage599a_full\jbig\Debug\BuildLog.htm”中
 jbig - 0 错误，1 警告</pre></table><table   width=100% height=20 bgcolor=#CFCFE5><tr><td><font face=宋体 size=+2>
 </font></table></body></html>
