--- a/tools/cximage599a_full/jpeg/Debug/BuildLog.htm
+++ b/tools/cximage599a_full/jpeg/Debug/BuildLog.htm
@@ -11,108 +11,108 @@
 </h3>
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 命令行
-</font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在创建临时文件“e:\cocos2dx\67393cximage599a_full\jpeg\Debug\RSP000009.rsp”，其内容为
+</font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在创建临时文件“e:\project\quick-cc\tools\cximage599a_full\jpeg\Debug\RSP000007.rsp”，其内容为
 [
 /Od /D "WIN32" /D "_DEBUG" /D "_WINDOWS" /D "_AFXDLL" /FD /EHsc /MDd /Fp".\Debug/Jpeg.pch" /Fo".\Debug/" /Fd".\Debug/" /W3 /c /ZI /TC
-.\jutils.c
-.\jquant2.c
-.\jquant1.c
-.\jmemnobs.c
-.\jmemmgr.c
-.\jidctred.c
-.\jidctint.c
-.\jidctfst.c
-.\jidctflt.c
-.\jfdctint.c
-.\jfdctfst.c
-.\jfdctflt.c
-.\jerror.c
-.\jdtrans.c
-.\jdsample.c
-.\jdpostct.c
-.\jdphuff.c
-.\jdmerge.c
-.\jdmaster.c
-.\jdmarker.c
-.\jdmainct.c
-.\jdinput.c
-.\jdhuff.c
-.\jddctmgr.c
-.\jdcolor.c
-.\jdcoefct.c
-.\jdatasrc.c
-.\jdatadst.c
-.\jdapistd.c
-.\jdapimin.c
-.\jctrans.c
-.\jcsample.c
-.\jcprepct.c
-.\jcphuff.c
-.\jcparam.c
-.\jcomapi.c
-.\jcmaster.c
-.\jcmarker.c
-.\jcmainct.c
-.\jcinit.c
-.\jchuff.c
-.\jcdctmgr.c
-.\jccolor.c
-.\jccoefct.c
-.\jcapistd.c
-.\jcapimin.c
+".\jutils.c"
+".\jquant2.c"
+".\jquant1.c"
+".\jmemnobs.c"
+".\jmemmgr.c"
+".\jidctred.c"
+".\jidctint.c"
+".\jidctfst.c"
+".\jidctflt.c"
+".\jfdctint.c"
+".\jfdctfst.c"
+".\jfdctflt.c"
+".\jerror.c"
+".\jdtrans.c"
+".\jdsample.c"
+".\jdpostct.c"
+".\jdphuff.c"
+".\jdmerge.c"
+".\jdmaster.c"
+".\jdmarker.c"
+".\jdmainct.c"
+".\jdinput.c"
+".\jdhuff.c"
+".\jddctmgr.c"
+".\jdcolor.c"
+".\jdcoefct.c"
+".\jdatasrc.c"
+".\jdatadst.c"
+".\jdapistd.c"
+".\jdapimin.c"
+".\jctrans.c"
+".\jcsample.c"
+".\jcprepct.c"
+".\jcphuff.c"
+".\jcparam.c"
+".\jcomapi.c"
+".\jcmaster.c"
+".\jcmarker.c"
+".\jcmainct.c"
+".\jcinit.c"
+".\jchuff.c"
+".\jcdctmgr.c"
+".\jccolor.c"
+".\jccoefct.c"
+".\jcapistd.c"
+".\jcapimin.c"
 ]
-正在创建命令行“cl.exe @e:\cocos2dx\67393cximage599a_full\jpeg\Debug\RSP000009.rsp /nologo”
-正在创建临时文件“e:\cocos2dx\67393cximage599a_full\jpeg\Debug\RSP00000A.rsp”，其内容为
+正在创建命令行“cl.exe @"e:\project\quick-cc\tools\cximage599a_full\jpeg\Debug\RSP000007.rsp" /nologo”
+正在创建临时文件“e:\project\quick-cc\tools\cximage599a_full\jpeg\Debug\RSP000008.rsp”，其内容为
 [
 /OUT:".\Debug\Jpeg.lib" /NOLOGO
-.\debug\Jcapimin.obj
-.\debug\Jcapistd.obj
-.\debug\Jccoefct.obj
-.\debug\Jccolor.obj
-.\debug\Jcdctmgr.obj
-.\debug\Jchuff.obj
-.\debug\Jcinit.obj
-.\debug\Jcmainct.obj
-.\debug\Jcmarker.obj
-.\debug\Jcmaster.obj
-.\debug\Jcomapi.obj
-.\debug\Jcparam.obj
-.\debug\Jcphuff.obj
-.\debug\Jcprepct.obj
-.\debug\Jcsample.obj
-.\debug\Jctrans.obj
-.\debug\Jdapimin.obj
-.\debug\Jdapistd.obj
-.\debug\Jdatadst.obj
-.\debug\Jdatasrc.obj
-.\debug\Jdcoefct.obj
-.\debug\Jdcolor.obj
-.\debug\Jddctmgr.obj
-.\debug\Jdhuff.obj
-.\debug\Jdinput.obj
-.\debug\Jdmainct.obj
-.\debug\Jdmarker.obj
-.\debug\Jdmaster.obj
-.\debug\Jdmerge.obj
-.\debug\Jdphuff.obj
-.\debug\Jdpostct.obj
-.\debug\Jdsample.obj
-.\debug\Jdtrans.obj
-.\debug\Jerror.obj
-.\debug\Jfdctflt.obj
-.\debug\Jfdctfst.obj
-.\debug\Jfdctint.obj
-.\debug\Jidctflt.obj
-.\debug\Jidctfst.obj
-.\debug\Jidctint.obj
-.\debug\Jidctred.obj
-.\debug\Jmemmgr.obj
-.\debug\Jmemnobs.obj
-.\debug\Jquant1.obj
-.\debug\Jquant2.obj
-.\debug\Jutils.obj
+".\Debug\Jcapimin.obj"
+".\Debug\Jcapistd.obj"
+".\Debug\Jccoefct.obj"
+".\Debug\Jccolor.obj"
+".\Debug\Jcdctmgr.obj"
+".\Debug\Jchuff.obj"
+".\Debug\Jcinit.obj"
+".\Debug\Jcmainct.obj"
+".\Debug\Jcmarker.obj"
+".\Debug\Jcmaster.obj"
+".\Debug\Jcomapi.obj"
+".\Debug\Jcparam.obj"
+".\Debug\Jcphuff.obj"
+".\Debug\Jcprepct.obj"
+".\Debug\Jcsample.obj"
+".\Debug\Jctrans.obj"
+".\Debug\Jdapimin.obj"
+".\Debug\Jdapistd.obj"
+".\Debug\Jdatadst.obj"
+".\Debug\Jdatasrc.obj"
+".\Debug\Jdcoefct.obj"
+".\Debug\Jdcolor.obj"
+".\Debug\Jddctmgr.obj"
+".\Debug\Jdhuff.obj"
+".\Debug\Jdinput.obj"
+".\Debug\Jdmainct.obj"
+".\Debug\Jdmarker.obj"
+".\Debug\Jdmaster.obj"
+".\Debug\Jdmerge.obj"
+".\Debug\Jdphuff.obj"
+".\Debug\Jdpostct.obj"
+".\Debug\Jdsample.obj"
+".\Debug\Jdtrans.obj"
+".\Debug\Jerror.obj"
+".\Debug\Jfdctflt.obj"
+".\Debug\Jfdctfst.obj"
+".\Debug\Jfdctint.obj"
+".\Debug\Jidctflt.obj"
+".\Debug\Jidctfst.obj"
+".\Debug\Jidctint.obj"
+".\Debug\Jidctred.obj"
+".\Debug\Jmemmgr.obj"
+".\Debug\Jmemnobs.obj"
+".\Debug\Jquant1.obj"
+".\Debug\Jquant2.obj"
+".\Debug\Jutils.obj"
 ]
-正在创建命令行“lib.exe @e:\cocos2dx\67393cximage599a_full\jpeg\Debug\RSP00000A.rsp”
+正在创建命令行“lib.exe @"e:\project\quick-cc\tools\cximage599a_full\jpeg\Debug\RSP000008.rsp"”
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 输出窗口
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在编译...
@@ -171,6 +171,6 @@ jcapimin.c
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 结果
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-生成日志保存在“file://e:\cocos2dx\67393cximage599a_full\jpeg\Debug\BuildLog.htm”中
+生成日志保存在“file://e:\project\quick-cc\tools\cximage599a_full\jpeg\Debug\BuildLog.htm”中
 jpeg - 0 错误，0 警告</pre></table><table   width=100% height=20 bgcolor=#CFCFE5><tr><td><font face=宋体 size=+2>
 </font></table></body></html>
