--- a/tools/cximage599a_full/png/Debug/BuildLog.htm
+++ b/tools/cximage599a_full/png/Debug/BuildLog.htm
@@ -11,48 +11,48 @@
 </h3>
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 命令行
-</font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在创建临时文件“e:\cocos2dx\67393cximage599a_full\png\Debug\RSP000007.rsp”，其内容为
+</font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在创建临时文件“e:\project\quick-cc\tools\cximage599a_full\png\Debug\RSP000005.rsp”，其内容为
 [
 /Od /I "..\zlib" /D "WIN32" /D "_DEBUG" /D "_WINDOWS" /D "_AFXDLL" /D "_MBCS" /FD /EHsc /MDd /Fp".\Debug/png.pch" /Fo".\Debug/" /Fd".\Debug/" /W3 /c /ZI
-.\pngwutil.c
-.\pngwtran.c
-.\pngwrite.c
-.\pngwio.c
-.\pngvcrd.c
-.\pngtrans.c
-.\pngset.c
-.\pngrutil.c
-.\pngrtran.c
-.\pngrio.c
-.\pngread.c
-.\pngpread.c
-.\pngmem.c
-.\pngget.c
-.\pngerror.c
-.\png.c
+".\pngwutil.c"
+".\pngwtran.c"
+".\pngwrite.c"
+".\pngwio.c"
+".\pngvcrd.c"
+".\pngtrans.c"
+".\pngset.c"
+".\pngrutil.c"
+".\pngrtran.c"
+".\pngrio.c"
+".\pngread.c"
+".\pngpread.c"
+".\pngmem.c"
+".\pngget.c"
+".\pngerror.c"
+".\png.c"
 ]
-正在创建命令行“cl.exe @e:\cocos2dx\67393cximage599a_full\png\Debug\RSP000007.rsp /nologo”
-正在创建临时文件“e:\cocos2dx\67393cximage599a_full\png\Debug\RSP000008.rsp”，其内容为
+正在创建命令行“cl.exe @"e:\project\quick-cc\tools\cximage599a_full\png\Debug\RSP000005.rsp" /nologo”
+正在创建临时文件“e:\project\quick-cc\tools\cximage599a_full\png\Debug\RSP000006.rsp”，其内容为
 [
 /OUT:".\Debug\png.lib" /NOLOGO
-.\debug\png.obj
-.\debug\pngerror.obj
-.\debug\pngget.obj
-.\debug\pngmem.obj
-.\debug\pngpread.obj
-.\debug\pngread.obj
-.\debug\pngrio.obj
-.\debug\pngrtran.obj
-.\debug\pngrutil.obj
-.\debug\pngset.obj
-.\debug\pngtrans.obj
-.\debug\pngvcrd.obj
-.\debug\pngwio.obj
-.\debug\pngwrite.obj
-.\debug\pngwtran.obj
-.\debug\pngwutil.obj
+".\Debug\png.obj"
+".\Debug\pngerror.obj"
+".\Debug\pngget.obj"
+".\Debug\pngmem.obj"
+".\Debug\pngpread.obj"
+".\Debug\pngread.obj"
+".\Debug\pngrio.obj"
+".\Debug\pngrtran.obj"
+".\Debug\pngrutil.obj"
+".\Debug\pngset.obj"
+".\Debug\pngtrans.obj"
+".\Debug\pngvcrd.obj"
+".\Debug\pngwio.obj"
+".\Debug\pngwrite.obj"
+".\Debug\pngwtran.obj"
+".\Debug\pngwutil.obj"
 ]
-正在创建命令行“lib.exe @e:\cocos2dx\67393cximage599a_full\png\Debug\RSP000008.rsp”
+正在创建命令行“lib.exe @"e:\project\quick-cc\tools\cximage599a_full\png\Debug\RSP000006.rsp"”
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 输出窗口
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在编译...
@@ -77,6 +77,6 @@ png.c
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 结果
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-生成日志保存在“file://e:\cocos2dx\67393cximage599a_full\png\Debug\BuildLog.htm”中
+生成日志保存在“file://e:\project\quick-cc\tools\cximage599a_full\png\Debug\BuildLog.htm”中
 png - 0 错误，0 警告</pre></table><table   width=100% height=20 bgcolor=#CFCFE5><tr><td><font face=宋体 size=+2>
 </font></table></body></html>
