--- a/tools/cximage599a_full/tiff/Debug/BuildLog.htm
+++ b/tools/cximage599a_full/tiff/Debug/BuildLog.htm
@@ -11,82 +11,82 @@
 </h3>
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 命令行
-</font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在创建临时文件“e:\cocos2dx\67393cximage599a_full\tiff\Debug\RSP000005.rsp”，其内容为
+</font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在创建临时文件“e:\project\quick-cc\tools\cximage599a_full\tiff\Debug\RSP000003.rsp”，其内容为
 [
 /Od /I "..\zlib" /D "WIN32" /D "_DEBUG" /D "_LIB" /D "_AFXDLL" /D "_MBCS" /FD /EHsc /RTC1 /MDd /Fp".\Debug/Tiff.pch" /Fo".\Debug/" /Fd".\Debug/" /W3 /c /ZI
-.\tif_zip.c
-.\tif_write.c
-.\tif_warning.c
-.\tif_version.c
-.\tif_tile.c
-.\tif_thunder.c
-.\tif_swab.c
-.\tif_strip.c
-.\tif_read.c
-.\tif_print.c
-.\tif_predict.c
-.\tif_pixarlog.c
-.\tif_packbits.c
-.\tif_open.c
-.\tif_ojpeg.c
-.\tif_next.c
-.\tif_lzw.c
-.\tif_luv.c
-.\tif_jpeg.c
-.\tif_getimage.c
-.\tif_flush.c
-.\tif_fax3.c
-.\tif_error.c
-.\tif_dumpmode.c
-.\tif_dirwrite.c
-.\tif_dirread.c
-.\tif_dirinfo.c
-.\tif_dir.c
-.\tif_compress.c
-.\tif_codec.c
-.\tif_close.c
-.\tif_aux.c
-.\fax3sm_winnt.c
+".\tif_zip.c"
+".\tif_write.c"
+".\tif_warning.c"
+".\tif_version.c"
+".\tif_tile.c"
+".\tif_thunder.c"
+".\tif_swab.c"
+".\tif_strip.c"
+".\tif_read.c"
+".\tif_print.c"
+".\tif_predict.c"
+".\tif_pixarlog.c"
+".\tif_packbits.c"
+".\tif_open.c"
+".\tif_ojpeg.c"
+".\tif_next.c"
+".\tif_lzw.c"
+".\tif_luv.c"
+".\tif_jpeg.c"
+".\tif_getimage.c"
+".\tif_flush.c"
+".\tif_fax3.c"
+".\tif_error.c"
+".\tif_dumpmode.c"
+".\tif_dirwrite.c"
+".\tif_dirread.c"
+".\tif_dirinfo.c"
+".\tif_dir.c"
+".\tif_compress.c"
+".\tif_codec.c"
+".\tif_close.c"
+".\tif_aux.c"
+".\fax3sm_winnt.c"
 ]
-正在创建命令行“cl.exe @e:\cocos2dx\67393cximage599a_full\tiff\Debug\RSP000005.rsp /nologo”
-正在创建临时文件“e:\cocos2dx\67393cximage599a_full\tiff\Debug\RSP000006.rsp”，其内容为
+正在创建命令行“cl.exe @"e:\project\quick-cc\tools\cximage599a_full\tiff\Debug\RSP000003.rsp" /nologo”
+正在创建临时文件“e:\project\quick-cc\tools\cximage599a_full\tiff\Debug\RSP000004.rsp”，其内容为
 [
 /OUT:".\Debug\Tiff.lib" /NOLOGO
-.\debug\fax3sm_winnt.obj
-.\debug\tif_aux.obj
-.\debug\tif_close.obj
-.\debug\tif_codec.obj
-.\debug\tif_compress.obj
-.\debug\tif_dir.obj
-.\debug\tif_dirinfo.obj
-.\debug\tif_dirread.obj
-.\debug\tif_dirwrite.obj
-.\debug\tif_dumpmode.obj
-.\debug\tif_error.obj
-.\debug\tif_fax3.obj
-.\debug\tif_flush.obj
-.\debug\tif_getimage.obj
-.\debug\tif_jpeg.obj
-.\debug\tif_luv.obj
-.\debug\tif_lzw.obj
-.\debug\tif_next.obj
-.\debug\tif_ojpeg.obj
-.\debug\tif_open.obj
-.\debug\tif_packbits.obj
-.\debug\tif_pixarlog.obj
-.\debug\tif_predict.obj
-.\debug\tif_print.obj
-.\debug\tif_read.obj
-.\debug\tif_strip.obj
-.\debug\tif_swab.obj
-.\debug\tif_thunder.obj
-.\debug\tif_tile.obj
-.\debug\tif_version.obj
-.\debug\tif_warning.obj
-.\debug\tif_write.obj
-.\debug\tif_zip.obj
+".\Debug\fax3sm_winnt.obj"
+".\Debug\tif_aux.obj"
+".\Debug\tif_close.obj"
+".\Debug\tif_codec.obj"
+".\Debug\tif_compress.obj"
+".\Debug\tif_dir.obj"
+".\Debug\tif_dirinfo.obj"
+".\Debug\tif_dirread.obj"
+".\Debug\tif_dirwrite.obj"
+".\Debug\tif_dumpmode.obj"
+".\Debug\tif_error.obj"
+".\Debug\tif_fax3.obj"
+".\Debug\tif_flush.obj"
+".\Debug\tif_getimage.obj"
+".\Debug\tif_jpeg.obj"
+".\Debug\tif_luv.obj"
+".\Debug\tif_lzw.obj"
+".\Debug\tif_next.obj"
+".\Debug\tif_ojpeg.obj"
+".\Debug\tif_open.obj"
+".\Debug\tif_packbits.obj"
+".\Debug\tif_pixarlog.obj"
+".\Debug\tif_predict.obj"
+".\Debug\tif_print.obj"
+".\Debug\tif_read.obj"
+".\Debug\tif_strip.obj"
+".\Debug\tif_swab.obj"
+".\Debug\tif_thunder.obj"
+".\Debug\tif_tile.obj"
+".\Debug\tif_version.obj"
+".\Debug\tif_warning.obj"
+".\Debug\tif_write.obj"
+".\Debug\tif_zip.obj"
 ]
-正在创建命令行“lib.exe @e:\cocos2dx\67393cximage599a_full\tiff\Debug\RSP000006.rsp”
+正在创建命令行“lib.exe @"e:\project\quick-cc\tools\cximage599a_full\tiff\Debug\RSP000004.rsp"”
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 输出窗口
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在编译...
@@ -130,6 +130,6 @@ fax3sm_winnt.c
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 结果
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-生成日志保存在“file://e:\cocos2dx\67393cximage599a_full\tiff\Debug\BuildLog.htm”中
+生成日志保存在“file://e:\project\quick-cc\tools\cximage599a_full\tiff\Debug\BuildLog.htm”中
 tiff - 0 错误，0 警告</pre></table><table   width=100% height=20 bgcolor=#CFCFE5><tr><td><font face=宋体 size=+2>
 </font></table></body></html>
