--- a/tools/cximage599a_full/zlib/Debug/BuildLog.htm
+++ b/tools/cximage599a_full/zlib/Debug/BuildLog.htm
@@ -11,40 +11,40 @@
 </h3>
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 命令行
-</font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在创建临时文件“e:\cocos2dx\67393cximage599a_full\zlib\Debug\RSP000003.rsp”，其内容为
+</font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在创建临时文件“e:\project\quick-cc\tools\cximage599a_full\zlib\Debug\RSP000001.rsp”，其内容为
 [
 /Od /D "WIN32" /D "_DEBUG" /D "_WINDOWS" /D "_AFXDLL" /D "_MBCS" /FD /EHsc /MDd /Fp".\Debug/zlib.pch" /Fo".\Debug/" /Fd".\Debug/" /W3 /c /ZI /TC
-.\zutil.c
-.\uncompr.c
-.\trees.c
-.\inftrees.c
-.\inflate.c
-.\inffast.c
-.\infback.c
-.\gzio.c
-.\deflate.c
-.\crc32.c
-.\compress.c
-.\adler32.c
+".\zutil.c"
+".\uncompr.c"
+".\trees.c"
+".\inftrees.c"
+".\inflate.c"
+".\inffast.c"
+".\infback.c"
+".\gzio.c"
+".\deflate.c"
+".\crc32.c"
+".\compress.c"
+".\adler32.c"
 ]
-正在创建命令行“cl.exe @e:\cocos2dx\67393cximage599a_full\zlib\Debug\RSP000003.rsp /nologo”
-正在创建临时文件“e:\cocos2dx\67393cximage599a_full\zlib\Debug\RSP000004.rsp”，其内容为
+正在创建命令行“cl.exe @"e:\project\quick-cc\tools\cximage599a_full\zlib\Debug\RSP000001.rsp" /nologo”
+正在创建临时文件“e:\project\quick-cc\tools\cximage599a_full\zlib\Debug\RSP000002.rsp”，其内容为
 [
 /OUT:".\Debug\zlib.lib" /NOLOGO
-.\debug\adler32.obj
-.\debug\compress.obj
-.\debug\crc32.obj
-.\debug\deflate.obj
-.\debug\gzio.obj
-.\debug\infback.obj
-.\debug\inffast.obj
-.\debug\inflate.obj
-.\debug\inftrees.obj
-.\debug\trees.obj
-.\debug\uncompr.obj
-.\debug\zutil.obj
+".\Debug\adler32.obj"
+".\Debug\compress.obj"
+".\Debug\crc32.obj"
+".\Debug\deflate.obj"
+".\Debug\gzio.obj"
+".\Debug\infback.obj"
+".\Debug\inffast.obj"
+".\Debug\inflate.obj"
+".\Debug\inftrees.obj"
+".\Debug\trees.obj"
+".\Debug\uncompr.obj"
+".\Debug\zutil.obj"
 ]
-正在创建命令行“lib.exe @e:\cocos2dx\67393cximage599a_full\zlib\Debug\RSP000004.rsp”
+正在创建命令行“lib.exe @"e:\project\quick-cc\tools\cximage599a_full\zlib\Debug\RSP000002.rsp"”
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 输出窗口
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>正在编译...
@@ -65,6 +65,6 @@ adler32.c
 </pre></table><table width=100%% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 结果
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-生成日志保存在“file://e:\cocos2dx\67393cximage599a_full\zlib\Debug\BuildLog.htm”中
+生成日志保存在“file://e:\project\quick-cc\tools\cximage599a_full\zlib\Debug\BuildLog.htm”中
 zlib - 0 错误，0 警告</pre></table><table   width=100% height=20 bgcolor=#CFCFE5><tr><td><font face=宋体 size=+2>
 </font></table></body></html>
